<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/editUname"
    android:hint="@string/enter_user_name"
    android:inputType="text"
    android:paddingLeft="20dp"
    android:layout_centerInParent="true"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPwd"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:layout_below="@+id/editUname"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_below="@+id/editPwd"
        android:layout_centerInParent="true"
        android:text="@string/login_btn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_link"
        android:text="@string/signup_link"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="15dp"
        />
</RelativeLayout>